--- a/index.html
+++ b/index.html
@@ -3,60 +3,122 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🚀 Forex Big Move Detector</title>
+  <title>Forex Big Move Detector</title>
   <style>
-    body { background: black; color: #00ff99; font-family: Arial, sans-serif; text-align: center; padding: 40px; }
-    h1 { color: #00ff66; }
-    button { background: #00cc66; color: white; border: none; padding: 12px 20px; font-size: 16px; border-radius: 8px; cursor: pointer; margin-top: 20px; }
-    button:hover { background: #00994d; }
-    .signal-box { margin-top: 30px; padding: 20px; border: 2px solid #00ff99; border-radius: 10px; display: inline-block; min-width: 250px; }
-    .buy { color: lime; font-weight: bold; }
-    .sell { color: red; font-weight: bold; }
-    .wait { color: yellow; font-weight: bold; }
+    body {
+      background: black;
+      color: lime;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
+    h1 {
+      color: #00ff7f;
+      font-size: 28px;
+    }
+    select, button {
+      padding: 10px;
+      font-size: 16px;
+      margin: 10px;
+      border-radius: 10px;
+      border: none;
+    }
+    button {
+      background: limegreen;
+      color: black;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    #result {
+      margin-top: 20px;
+      border: 2px solid lime;
+      border-radius: 12px;
+      padding: 20px;
+      font-size: 18px;
+    }
+    .buy { color: #00ff00; font-weight: bold; }
+    .sell { color: #ff4444; font-weight: bold; }
+    .wait { color: #ffa500; font-weight: bold; }
   </style>
 </head>
 <body>
   <h1>🚀 Forex Big Move Detector</h1>
-  <p>Click below to check market move & generate signal</p>
+  <p>Check Market Move & Generate Signal</p>
 
   <select id="symbol">
     <option value="BTCUSDT">BTC/USDT</option>
     <option value="ETHUSDT">ETH/USDT</option>
-    <option value="XAUUSDT">GOLD (XAU/USDT)</option>
+    <option value="BNBUSDT">BNB/USDT</option>
+    <option value="XRPUSDT">XRP/USDT</option>
   </select>
-  
-  <br>
+
   <button onclick="generateSignal()">Generate Signal</button>
 
-  <div id="result" class="signal-box">Waiting...</div>
+  <div id="result"></div>
 
   <script>
+    let lookback = 20; // last 20 candles (20 mins for 1m interval)
+    let prices = [];
+
+    // Fetch last close price
+    async function fetchClose(symbol) {
+      const res = await fetch(
+        `https://api.binance.com/api/v3/klines?symbol=${symbol}&interval=1m&limit=1`
+      );
+      const data = await res.json();
+      return parseFloat(data[0][4]); // last candle close
+    }
+
+    // Generate Signal
     async function generateSignal() {
       const symbol = document.getElementById("symbol").value;
-
-      // Get last 2 candles (1 min interval)
-      const res = await fetch(`https://api.binance.com/api/v3/klines?symbol=${symbol}&interval=1m&limit=2`);
-      const data = await res.json();
-
-      const prevClose = parseFloat(data[0][4]); // last candle close
-      const lastClose = parseFloat(data[1][4]); // current candle close
-
-      const diff = lastClose - prevClose;
-      const changePct = (diff / prevClose) * 100;
+      const price = await fetchClose(symbol);
+      prices.push(price);
+      if (prices.length > lookback) prices.shift();
 
       let signal = "WAIT";
-      if (Math.abs(changePct) > 0.3) {  // sudden move > 0.3%
-        signal = diff > 0 ? "BUY" : "SELL";
-      }
+      let signalClass = "wait";
 
-      document.getElementById("result").innerHTML = `
-        <p>Symbol: ${symbol}</p>
-        <p>Prev Close: ${prevClose}</p>
-        <p>Last Close: ${lastClose}</p>
-        <p>Change: ${changePct.toFixed(3)}%</p>
-        <p class="${signal.toLowerCase()}">Signal: ${signal}</p>
-      `;
+      if (prices.length >= lookback) {
+        const high = Math.max(...prices);
+        const low = Math.min(...prices);
+        const range = high - low;
+        const changePct = ((price - prices[0]) / prices[0]) * 100;
+
+        // --- Big Move Detector ---
+        if (changePct >= 0.3) {
+          signal = "BUY";
+          signalClass = "buy";
+        } else if (changePct <= -0.3) {
+          signal = "SELL";
+          signalClass = "sell";
+        } else {
+          // --- Early Breakout Detector ---
+          if (price > high * 0.998 && range < high * 0.005) {
+            signal = "⚡ POSSIBLE EARLY BUY (Breakout forming)";
+            signalClass = "buy";
+          } else if (price < low * 1.002 && range < high * 0.005) {
+            signal = "⚡ POSSIBLE EARLY SELL (Breakdown forming)";
+            signalClass = "sell";
+          }
+        }
+
+        document.getElementById("result").innerHTML = `
+          <p>Symbol: ${symbol}</p>
+          <p>Prev Price: ${prices[0]}</p>
+          <p>Last Price: ${price}</p>
+          <p>Change: ${changePct.toFixed(3)}%</p>
+          <p class="${signalClass}">Signal: ${signal}</p>
+        `;
+      } else {
+        document.getElementById("result").innerHTML = `
+          <p>Collecting data... (${prices.length}/${lookback})</p>
+        `;
+      }
     }
+
+    // Auto refresh every 10s
+    setInterval(generateSignal, 10000);
   </script>
 </body>
 </html>
